# github-notifier

./: Cargo.toml  Dockerfile  build.rs  rustfmt.toml
.github/workflows/: docker_build.yaml
src/: main.rs
