[package]
name = "github-notifier"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[dependencies]
# Common
anyhow = "^1.0"
lazy_static = "^1.4"
tokio = { version = "^1.34", features = ["rt-multi-thread", "macros"] }
futures = "^0.3"
reqwest = { version = "^0.12", features = ["stream"] }
json = "^0.12"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.9"
chrono = "^0.4"
log = "^0.4"
pretty_env_logger = "^0.5"
readonly = "^0.2"
prometheus = { version = "^0.13", features = ["process"] }
actix-web = "4"
rand = "^0.8"
regex = "^1.10"
